<resources>
    <string name="app_name">GastroPedia</string>
    <string name="about_me">About me</string>
    <string name="description_text">description text</string>
    <string name="category">Category</string>
    <string name="list_title">Gastronomy</string>
    <string name="banner_title">Welcome to Gastro Pedia!</string>
    <string name="banner_content">You can explore all the best of Gastronomy in this world!</string>
    <string name="banner_info">Click each item in the list to see the details!</string>
    <string name="nationality">Nationality:</string>
    <string name="ingredients">Ingredients</string>
    <string name="share_this_gastronomy">Share this gastronomy</string>
    <string name="history">History</string>
    <string name="project_owner_name">Muhamad Afif Fadillah</string>
    <string name="email">5dillah01@gmail.com | muhamad.fadillah@student.ac.id</string>
    <string name="role">Junior Software Developer</string>
    <string name="gastronomy_picture">Gastronomy Picture</string>
    <string name="close_banner">close banner</string>
    <string-array name="gastronomy_name">
        <item>Sushi</item>
        <item>Pizza Margherita</item>
        <item>Paella</item>
        <item>Beef Bourguignon</item>
        <item>Pad Thai</item>
        <item>Tacos al Pastor</item>
        <item>Pho</item>
        <item>Moussaka</item>
        <item>Biryani</item>
        <item>Fish and Chips</item>
    </string-array>
    <string-array name="gastronomy_description">
        <item>A traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, vegetables, and occasionally tropical fruits.</item>
        <item>A classic Neapolitan pizza, made with San Marzano tomatoes, mozzarella cheese, fresh basil, salt, and extra-virgin olive oil. Simple yet delicious, it\'s the gold standard of pizzas.</item>
        <item>A Spanish rice dish that originated in the fields of Valencia on the eastern coast of Spain. It\'s made with round grain rice, bajoqueta and tavella (varieties of green beans), rabbit, chicken, sometimes duck, garrofó (a variety of lima beans), and optionally snails.</item>
        <item>A classic French dish of beef braised in red wine, beef broth, and seasoned vegetables including pearl onions and mushrooms. This dish is a staple of French cuisine.</item>
        <item>A stir-fried rice noodle dish commonly served as a street food in Thailand. It is made with soaked dried rice noodles, which are stir-fried with eggs and chopped firm tofu, flavored with tamarind pulp, fish sauce, dried shrimp, garlic, red chili pepper and palm sugar.</item>
        <item>A dish developed in central Mexico, likely in the 1920s and 1930s. It consists of thin slices of seasoned pork, layered on a vertical rotisserie cooked and flame-broiled as it spins.</item>
        <item>A Vietnamese soup consisting of broth, rice noodles, herbs, and meat – usually beef or chicken. Pho is a popular street food in Vietnam and the specialty of a number of restaurant chains around the world.</item>
        <item>An eggplant or potato-based dish, often including ground meat, in the cuisines of the Balkans, the Middle East, and the South Caucasus. The most famous version of the dish today appeared in the 1920s with the arrival of Greek refugees from Turkey.</item>
        <item>A mixed rice dish originating among the Muslims of the Indian subcontinent. It is made with Indian spices, rice, and usually some type of meat (chicken, beef, goat, lamb, prawn, or fish), or in some cases without any meat, and sometimes, in addition, eggs and potatoes.</item>
        <item>A hot dish consisting of fried fish in crispy batter, served with chips (thick-cut potato fries). It\'s a quintessential part of British cuisine and is often considered Britain\'s national dish.</item>
    </string-array>
    <string-array name="gastronomy_photo">
        <item>https://upload.wikimedia.org/wikipedia/commons/6/60/Sushi_platter.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/a/a3/Eq_it-na_pizza-margherita_sep2005_sml.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/e/ed/01_Paella_Valenciana_original.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Beef_bourguignon_NYT.jpg/1200px-Beef_bourguignon_NYT.jpg?20151115192826</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/3/39/Phat_Thai_kung_Chang_Khien_street_stall.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/7/73/001_Tacos_de_carnitas%2C_carne_asada_y_al_pastor.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/5/53/Pho-Beef-Noodles-2008.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/a/a8/MussakasMeMelitsanesKePatates01.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/7/7c/Hyderabadi_Chicken_Biryani.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/f/ff/Fish_and_chips_blackpool.jpg</item>
    </string-array>
    <string-array name="gastronomy_category">
        <item>Japanese</item>
        <item>Italian</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Thai</item>
        <item>Mexican</item>
        <item>Vietnamese</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>British</item>
    </string-array>
    <string-array name="gastronomy_ingredients">
        <item>- Rice\n- Seaweed\n- Fish\n- Soy Sauce\n- Wasabi</item>
        <item>- Flour\n- Tomatoes\n- Mozzarella Cheese\n- Basil\n- Olive Oil</item>
        <item>- Rice\n- Chicken\n- Rabbit\n- Green Beans\n- Saffron</item>
        <item>- Beef\n- Red Wine\n- Mushrooms\n- Onions\n- Garlic</item>
        <item>- Rice Noodles\n- Eggs\n- Tofu\n- Tamarind Sauce\n- Peanuts</item>
        <item>- Pork\n- Pineapple\n- Onion\n- Cilantro\n- Tortilla</item>
        <item>- Beef\n- Rice Noodles\n- Broth\n- Bean Sprouts\n- Basil</item>
        <item>- Eggplant\n- Potatoes\n- Ground Beef\n- Tomatoes\n- Cheese</item>
        <item>- Rice\n- Chicken\n- Yogurt\n- Spices\n- Saffron\n- Cilantro</item>
        <item>- Fish\n- Potatoes\n- Flour\n- Vinegar\n- Salt</item>
    </string-array>
</resources>