<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/banner_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_lightbulb_outline_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/banner_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/banner_title"
        android:textColor="@color/md_theme_tertiary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/banner_icon"
        app:layout_constraintTop_toTopOf="@id/banner_icon" />

    <TextView
        android:id="@+id/banner_content"
        android:layout_width="0dp"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        android:text="@string/banner_content"
        android:textColor="@color/md_theme_tertiary"
        app:layout_constraintEnd_toEndOf="@id/banner_title"
        app:layout_constraintStart_toStartOf="@id/banner_title"
        app:layout_constraintTop_toBottomOf="@id/banner_title" />

    <TextView
        android:id="@+id/banner_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/banner_info"
        android:textColor="@color/md_theme_tertiary"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/banner_content"
        app:layout_constraintStart_toStartOf="@id/banner_content"
        app:layout_constraintTop_toBottomOf="@id/banner_content" />
</androidx.constraintlayout.widget.ConstraintLayout>