<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingHorizontal="8dp"
            app:logo="@drawable/app_logo_small"
            app:logoAdjustViewBounds="true"
            app:logoDescription="@string/app_name"
            app:title="@null" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/banner_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="4dp"
        android:backgroundTint="@color/md_theme_tertiaryContainer"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <include layout="@layout/layout_banner" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_gravity="top|end"
            android:id="@+id/fab_close"
            android:contentDescription="@string/close_banner"
            android:src="@drawable/baseline_close_24"
            android:backgroundTint="@color/md_theme_errorContainer"
            android:layout_height="40dp" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16sp"
        android:text="@string/list_title"
        android:textColor="@color/md_theme_primary"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/banner_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gastro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_list_title"
        tools:listitem="@layout/item_row_gastro" />

</androidx.constraintlayout.widget.ConstraintLayout>